# sweet-catcher

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  SPEC.md  docker-compose.yml  prd.md
.githooks/: pre-push
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_master_profile.py  0002_create_search_criteria.py  0003_create_jobs.py
backend/app/: config.py  main.py
backend/app/db/: session.py
backend/app/jobs/: dedup.py  models.py  normalization.py  router.py  schemas.py  service.py
backend/app/jobs/connectors/: __init__.py  http.py  mapping.py  remote_rocketship.py  remotive.py
backend/app/profile/: models.py  router.py  schemas.py  service.py
backend/app/search/: models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_config.py  test_health.py  test_session.py
backend/tests/jobs/: test_dedup.py  test_migration.py  test_normalization.py  test_router.py  test_schemas.py  test_service.py
backend/tests/jobs/connectors/: test_http.py  test_mapping.py  test_registry.py  test_remote_rocketship.py  test_remotive.py
backend/tests/profile/: test_migration.py  test_router.py  test_schemas.py  test_service.py
backend/tests/search/: test_migration.py  test_router.py  test_schemas.py  test_service.py
docs/: resume-standard.md
docs/adr/: 0001-modular-monolith-architecture.md  0002-backend-and-persistence-stack.md  0003-async-processing-dramatiq-apscheduler.md  0004-llm-provider-abstraction.md  0005-async-persistence-sqlalchemy-psycopg3.md  0006-master-profile-versioning-jsonb-snapshots.md  0007-job-storage-normalized-columns-raw-jsonb.md  0008-multi-source-ingestion-api-and-scraping.md
docs/superpowers/plans/: 2026-06-26-phase-0-scaffolding.md  2026-06-27-master-profile.md
scripts/: codex-review.sh
