[project]
name = "sweet-catcher-backend"
version = "0.1.0"
description = "Personal AI Job Hunter backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff==0.15.20",
    "pyright>=1.1.380",
    # starlette's TestClient requires httpx2 (plain httpx is deprecated for it)
    "httpx2>=2.5.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["app", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
