[project]
name = "sweet-catcher-backend"
version = "0.1.0"
description = "Personal AI Job Hunter backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.18.5",
    "psycopg[binary]>=3.2",
    # async HTTP client for the source connectors; also backs starlette's TestClient
    "httpx2>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff==0.15.20",
    "pyright>=1.1.380",
    "pytest-asyncio>=1.4.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["app", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
